// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create Collector Default 1`] = `
[
  [
    "./node_modules/react/index.js",
    [Function],
  ],
  [
    "./src/components/Field/Field/Field.tsx",
    [Function],
  ],
  [
    "./src/components/Field/Field/SelectOption.tsx",
    [Function],
  ],
  [
    "./src/components/Field/Field/SelectOption.types.ts",
    [Function],
  ],
  [
    "./src/components/Field/Field/types.ts",
    [Function],
  ],
  [
    "./src/components/Field/Field.tsx",
    [Function],
  ],
  [
    "./src/components/Field/SelectOption.tsx",
    [Function],
  ],
  [
    "./src/components/Field/SelectOption.ts",
    [Function],
  ],
  [
    "./src/components/Field/SelectOption.types.ts",
    [Function],
  ],
  [
    "./src/components/Field/types.ts",
    [Function],
  ],
  [
    "./src/components/Field/types.tsx",
    [Function],
  ],
  [
    "./src/components/Input.tsx",
    [Function],
  ],
  [
    "./src/components/SelectOption.tsx",
    [Function],
  ],
  [
    "./src/components/SelectOption.types.ts",
    [Function],
  ],
  [
    "./src/utils/utils.ts",
    [Function],
  ],
  [
    "./src/constants.ts",
    [Function],
  ],
  [
    "./src/controller.ts",
    [Function],
  ],
  [
    "./src/index.ts",
    [Function],
  ],
  [
    "./src/SelectOption.tsx",
    [Function],
  ],
  [
    "./src/SelectOption.types.ts",
    [Function],
  ],
  [
    "./src/types.ts",
    [Function],
  ],
  [
    "./src/utils.ts",
    [Function],
  ],
]
`;

exports[`Create Collector Exclude From Imports Exclude SelectOption.tsx in first dir 1`] = `
[
  [
    "./node_modules/react/index.js",
    [Function],
  ],
  [
    "./src/components/Field/Field/Field.tsx",
    [Function],
  ],
  [
    "./src/components/Field/Field/SelectOption.tsx",
    [Function],
  ],
  [
    "./src/components/Field/Field/SelectOption.types.ts",
    [Function],
  ],
  [
    "./src/components/Field/Field/types.ts",
    [Function],
  ],
  [
    "./src/components/Field/Field.tsx",
    [Function],
  ],
  [
    "./src/components/Field/SelectOption.tsx",
    [Function],
  ],
  [
    "./src/components/Field/SelectOption.ts",
    [Function],
  ],
  [
    "./src/components/Field/SelectOption.types.ts",
    [Function],
  ],
  [
    "./src/components/Field/types.ts",
    [Function],
  ],
  [
    "./src/components/Field/types.tsx",
    [Function],
  ],
  [
    "./src/components/Input.tsx",
    [Function],
  ],
  [
    "./src/components/SelectOption.types.ts",
    [Function],
  ],
  [
    "./src/utils/utils.ts",
    [Function],
  ],
  [
    "./src/constants.ts",
    [Function],
  ],
  [
    "./src/controller.ts",
    [Function],
  ],
  [
    "./src/index.ts",
    [Function],
  ],
  [
    "./src/SelectOption.tsx",
    [Function],
  ],
  [
    "./src/SelectOption.types.ts",
    [Function],
  ],
  [
    "./src/types.ts",
    [Function],
  ],
  [
    "./src/utils.ts",
    [Function],
  ],
]
`;

exports[`Create Collector Exclude From Imports Exclude SelectOption.tsx in root 1`] = `
[
  [
    "./node_modules/react/index.js",
    [Function],
  ],
  [
    "./src/components/Field/Field/Field.tsx",
    [Function],
  ],
  [
    "./src/components/Field/Field/SelectOption.tsx",
    [Function],
  ],
  [
    "./src/components/Field/Field/SelectOption.types.ts",
    [Function],
  ],
  [
    "./src/components/Field/Field/types.ts",
    [Function],
  ],
  [
    "./src/components/Field/Field.tsx",
    [Function],
  ],
  [
    "./src/components/Field/SelectOption.tsx",
    [Function],
  ],
  [
    "./src/components/Field/SelectOption.ts",
    [Function],
  ],
  [
    "./src/components/Field/SelectOption.types.ts",
    [Function],
  ],
  [
    "./src/components/Field/types.ts",
    [Function],
  ],
  [
    "./src/components/Field/types.tsx",
    [Function],
  ],
  [
    "./src/components/Input.tsx",
    [Function],
  ],
  [
    "./src/components/SelectOption.tsx",
    [Function],
  ],
  [
    "./src/components/SelectOption.types.ts",
    [Function],
  ],
  [
    "./src/utils/utils.ts",
    [Function],
  ],
  [
    "./src/constants.ts",
    [Function],
  ],
  [
    "./src/controller.ts",
    [Function],
  ],
  [
    "./src/index.ts",
    [Function],
  ],
  [
    "./src/SelectOption.types.ts",
    [Function],
  ],
  [
    "./src/types.ts",
    [Function],
  ],
  [
    "./src/utils.ts",
    [Function],
  ],
]
`;

exports[`Create Collector Exclude From Imports Exclude SelectOption.tsx in root or first dir 1`] = `
[
  [
    "./node_modules/react/index.js",
    [Function],
  ],
  [
    "./src/components/Field/Field/Field.tsx",
    [Function],
  ],
  [
    "./src/components/Field/Field/SelectOption.tsx",
    [Function],
  ],
  [
    "./src/components/Field/Field/SelectOption.types.ts",
    [Function],
  ],
  [
    "./src/components/Field/Field/types.ts",
    [Function],
  ],
  [
    "./src/components/Field/Field.tsx",
    [Function],
  ],
  [
    "./src/components/Field/SelectOption.tsx",
    [Function],
  ],
  [
    "./src/components/Field/SelectOption.ts",
    [Function],
  ],
  [
    "./src/components/Field/SelectOption.types.ts",
    [Function],
  ],
  [
    "./src/components/Field/types.ts",
    [Function],
  ],
  [
    "./src/components/Field/types.tsx",
    [Function],
  ],
  [
    "./src/components/Input.tsx",
    [Function],
  ],
  [
    "./src/components/SelectOption.types.ts",
    [Function],
  ],
  [
    "./src/utils/utils.ts",
    [Function],
  ],
  [
    "./src/constants.ts",
    [Function],
  ],
  [
    "./src/controller.ts",
    [Function],
  ],
  [
    "./src/index.ts",
    [Function],
  ],
  [
    "./src/SelectOption.types.ts",
    [Function],
  ],
  [
    "./src/types.ts",
    [Function],
  ],
  [
    "./src/utils.ts",
    [Function],
  ],
]
`;

exports[`Create Collector Exclude From Imports Exclude SelectOption.tsx in second dir 1`] = `
[
  [
    "./node_modules/react/index.js",
    [Function],
  ],
  [
    "./src/components/Field/Field/Field.tsx",
    [Function],
  ],
  [
    "./src/components/Field/Field/SelectOption.tsx",
    [Function],
  ],
  [
    "./src/components/Field/Field/SelectOption.types.ts",
    [Function],
  ],
  [
    "./src/components/Field/Field/types.ts",
    [Function],
  ],
  [
    "./src/components/Field/Field.tsx",
    [Function],
  ],
  [
    "./src/components/Field/SelectOption.ts",
    [Function],
  ],
  [
    "./src/components/Field/SelectOption.types.ts",
    [Function],
  ],
  [
    "./src/components/Field/types.ts",
    [Function],
  ],
  [
    "./src/components/Field/types.tsx",
    [Function],
  ],
  [
    "./src/components/Input.tsx",
    [Function],
  ],
  [
    "./src/components/SelectOption.tsx",
    [Function],
  ],
  [
    "./src/components/SelectOption.types.ts",
    [Function],
  ],
  [
    "./src/utils/utils.ts",
    [Function],
  ],
  [
    "./src/constants.ts",
    [Function],
  ],
  [
    "./src/controller.ts",
    [Function],
  ],
  [
    "./src/index.ts",
    [Function],
  ],
  [
    "./src/SelectOption.tsx",
    [Function],
  ],
  [
    "./src/SelectOption.types.ts",
    [Function],
  ],
  [
    "./src/types.ts",
    [Function],
  ],
  [
    "./src/utils.ts",
    [Function],
  ],
]
`;

exports[`Create Collector Exclude From Imports Exclude all files ending with .types.ts or .types.tsx 1`] = `
[
  [
    "./node_modules/react/index.js",
    [Function],
  ],
  [
    "./src/components/Field/Field/Field.tsx",
    [Function],
  ],
  [
    "./src/components/Field/Field/SelectOption.tsx",
    [Function],
  ],
  [
    "./src/components/Field/Field/types.ts",
    [Function],
  ],
  [
    "./src/components/Field/Field.tsx",
    [Function],
  ],
  [
    "./src/components/Field/SelectOption.tsx",
    [Function],
  ],
  [
    "./src/components/Field/SelectOption.ts",
    [Function],
  ],
  [
    "./src/components/Field/types.ts",
    [Function],
  ],
  [
    "./src/components/Field/types.tsx",
    [Function],
  ],
  [
    "./src/components/Input.tsx",
    [Function],
  ],
  [
    "./src/components/SelectOption.tsx",
    [Function],
  ],
  [
    "./src/utils/utils.ts",
    [Function],
  ],
  [
    "./src/constants.ts",
    [Function],
  ],
  [
    "./src/controller.ts",
    [Function],
  ],
  [
    "./src/index.ts",
    [Function],
  ],
  [
    "./src/SelectOption.tsx",
    [Function],
  ],
  [
    "./src/types.ts",
    [Function],
  ],
  [
    "./src/utils.ts",
    [Function],
  ],
]
`;

exports[`Create Collector Exclude From Imports Exclude all from folders 1`] = `
[
  [
    "./node_modules/react/index.js",
    [Function],
  ],
  [
    "./src/utils/utils.ts",
    [Function],
  ],
  [
    "./src/constants.ts",
    [Function],
  ],
  [
    "./src/controller.ts",
    [Function],
  ],
  [
    "./src/index.ts",
    [Function],
  ],
  [
    "./src/SelectOption.tsx",
    [Function],
  ],
  [
    "./src/SelectOption.types.ts",
    [Function],
  ],
  [
    "./src/types.ts",
    [Function],
  ],
  [
    "./src/utils.ts",
    [Function],
  ],
]
`;

exports[`Create Collector Exclude From Imports Exclude everything 1`] = `
[
  [
    "./node_modules/react/index.js",
    [Function],
  ],
]
`;

exports[`Create Collector Exclude From Imports Exclude everything starts with SelectOption 1`] = `
[
  [
    "./node_modules/react/index.js",
    [Function],
  ],
  [
    "./src/components/Field/Field/Field.tsx",
    [Function],
  ],
  [
    "./src/components/Field/Field/types.ts",
    [Function],
  ],
  [
    "./src/components/Field/Field.tsx",
    [Function],
  ],
  [
    "./src/components/Field/types.ts",
    [Function],
  ],
  [
    "./src/components/Field/types.tsx",
    [Function],
  ],
  [
    "./src/components/Input.tsx",
    [Function],
  ],
  [
    "./src/utils/utils.ts",
    [Function],
  ],
  [
    "./src/constants.ts",
    [Function],
  ],
  [
    "./src/controller.ts",
    [Function],
  ],
  [
    "./src/index.ts",
    [Function],
  ],
  [
    "./src/types.ts",
    [Function],
  ],
  [
    "./src/utils.ts",
    [Function],
  ],
]
`;

exports[`Create Collector Exclude From Imports Exclude everything with name SelectOption.tsx 1`] = `
[
  [
    "./node_modules/react/index.js",
    [Function],
  ],
  [
    "./src/components/Field/Field/Field.tsx",
    [Function],
  ],
  [
    "./src/components/Field/Field/SelectOption.types.ts",
    [Function],
  ],
  [
    "./src/components/Field/Field/types.ts",
    [Function],
  ],
  [
    "./src/components/Field/Field.tsx",
    [Function],
  ],
  [
    "./src/components/Field/SelectOption.ts",
    [Function],
  ],
  [
    "./src/components/Field/SelectOption.types.ts",
    [Function],
  ],
  [
    "./src/components/Field/types.ts",
    [Function],
  ],
  [
    "./src/components/Field/types.tsx",
    [Function],
  ],
  [
    "./src/components/Input.tsx",
    [Function],
  ],
  [
    "./src/components/SelectOption.types.ts",
    [Function],
  ],
  [
    "./src/utils/utils.ts",
    [Function],
  ],
  [
    "./src/constants.ts",
    [Function],
  ],
  [
    "./src/controller.ts",
    [Function],
  ],
  [
    "./src/index.ts",
    [Function],
  ],
  [
    "./src/SelectOption.types.ts",
    [Function],
  ],
  [
    "./src/types.ts",
    [Function],
  ],
  [
    "./src/utils.ts",
    [Function],
  ],
]
`;

exports[`Create Collector Exclude From Imports Exclude ts and tsx extensions 1`] = `
[
  [
    "./node_modules/react/index.js",
    [Function],
  ],
  [
    "./src/components/Field/Field/unknown",
    [Function],
  ],
  [
    "./src/components/Field/script.js",
    [Function],
  ],
  [
    "./src/log.log",
    [Function],
  ],
  [
    "./src/Readme.md",
    [Function],
  ],
]
`;

exports[`Create Collector Exclude From Imports Exclude utils.ts from src and index.ts from utils 1`] = `
[
  [
    "./node_modules/react/index.js",
    [Function],
  ],
  [
    "./src/components/Field/Field/Field.tsx",
    [Function],
  ],
  [
    "./src/components/Field/Field/SelectOption.tsx",
    [Function],
  ],
  [
    "./src/components/Field/Field/SelectOption.types.ts",
    [Function],
  ],
  [
    "./src/components/Field/Field/types.ts",
    [Function],
  ],
  [
    "./src/components/Field/Field.tsx",
    [Function],
  ],
  [
    "./src/components/Field/SelectOption.tsx",
    [Function],
  ],
  [
    "./src/components/Field/SelectOption.ts",
    [Function],
  ],
  [
    "./src/components/Field/SelectOption.types.ts",
    [Function],
  ],
  [
    "./src/components/Field/types.ts",
    [Function],
  ],
  [
    "./src/components/Field/types.tsx",
    [Function],
  ],
  [
    "./src/components/Input.tsx",
    [Function],
  ],
  [
    "./src/components/SelectOption.tsx",
    [Function],
  ],
  [
    "./src/components/SelectOption.types.ts",
    [Function],
  ],
  [
    "./src/utils/utils.ts",
    [Function],
  ],
  [
    "./src/constants.ts",
    [Function],
  ],
  [
    "./src/controller.ts",
    [Function],
  ],
  [
    "./src/index.ts",
    [Function],
  ],
  [
    "./src/SelectOption.tsx",
    [Function],
  ],
  [
    "./src/SelectOption.types.ts",
    [Function],
  ],
  [
    "./src/types.ts",
    [Function],
  ],
  [
    "./src/utils.ts",
    [Function],
  ],
  [
    "./utils/folder/Option/Option.tsx",
    [Function],
  ],
  [
    "./utils/folder/Option/types.ts",
    [Function],
  ],
  [
    "./utils/folder/Form.tsx",
    [Function],
  ],
  [
    "./utils/folder/Select.tsx",
    [Function],
  ],
  [
    "./utils/folder/Select.types.ts",
    [Function],
  ],
  [
    "./utils/func.ts",
    [Function],
  ],
  [
    "./utils/common.ts",
    [Function],
  ],
  [
    "./utils/index.ts",
    [Function],
  ],
  [
    "./utils/types.ts",
    [Function],
  ],
  [
    "./utils/types.tsx",
    [Function],
  ],
  [
    "./utils/utils.ts",
    [Function],
  ],
]
`;

exports[`Create Collector Extensions Include all files 1`] = `
[
  [
    "./node_modules/react/index.js",
    [Function],
  ],
  [
    "./src/components/Field/Field/Field.tsx",
    [Function],
  ],
  [
    "./src/components/Field/Field/SelectOption.tsx",
    [Function],
  ],
  [
    "./src/components/Field/Field/SelectOption.types.ts",
    [Function],
  ],
  [
    "./src/components/Field/Field/types.ts",
    [Function],
  ],
  [
    "./src/components/Field/Field/unknown",
    [Function],
  ],
  [
    "./src/components/Field/Field.tsx",
    [Function],
  ],
  [
    "./src/components/Field/SelectOption.tsx",
    [Function],
  ],
  [
    "./src/components/Field/SelectOption.ts",
    [Function],
  ],
  [
    "./src/components/Field/SelectOption.types.ts",
    [Function],
  ],
  [
    "./src/components/Field/script.js",
    [Function],
  ],
  [
    "./src/components/Field/types.ts",
    [Function],
  ],
  [
    "./src/components/Field/types.tsx",
    [Function],
  ],
  [
    "./src/components/Input.tsx",
    [Function],
  ],
  [
    "./src/components/SelectOption.tsx",
    [Function],
  ],
  [
    "./src/components/SelectOption.types.ts",
    [Function],
  ],
  [
    "./src/utils/utils.ts",
    [Function],
  ],
  [
    "./src/constants.ts",
    [Function],
  ],
  [
    "./src/controller.ts",
    [Function],
  ],
  [
    "./src/index.ts",
    [Function],
  ],
  [
    "./src/log.log",
    [Function],
  ],
  [
    "./src/Readme.md",
    [Function],
  ],
  [
    "./src/SelectOption.tsx",
    [Function],
  ],
  [
    "./src/SelectOption.types.ts",
    [Function],
  ],
  [
    "./src/types.ts",
    [Function],
  ],
  [
    "./src/utils.ts",
    [Function],
  ],
]
`;

exports[`Create Collector Extensions Include all js files 1`] = `
[
  [
    "./node_modules/react/index.js",
    [Function],
  ],
  [
    "./src/components/Field/script.js",
    [Function],
  ],
]
`;

exports[`Create Collector Extensions Include all ts files 1`] = `
[
  [
    "./node_modules/react/index.js",
    [Function],
  ],
  [
    "./src/components/Field/Field/SelectOption.types.ts",
    [Function],
  ],
  [
    "./src/components/Field/Field/types.ts",
    [Function],
  ],
  [
    "./src/components/Field/SelectOption.ts",
    [Function],
  ],
  [
    "./src/components/Field/SelectOption.types.ts",
    [Function],
  ],
  [
    "./src/components/Field/types.ts",
    [Function],
  ],
  [
    "./src/components/SelectOption.types.ts",
    [Function],
  ],
  [
    "./src/utils/utils.ts",
    [Function],
  ],
  [
    "./src/constants.ts",
    [Function],
  ],
  [
    "./src/controller.ts",
    [Function],
  ],
  [
    "./src/index.ts",
    [Function],
  ],
  [
    "./src/SelectOption.types.ts",
    [Function],
  ],
  [
    "./src/types.ts",
    [Function],
  ],
  [
    "./src/utils.ts",
    [Function],
  ],
  [
    "./utils/folder/Option/types.ts",
    [Function],
  ],
  [
    "./utils/folder/Select.types.ts",
    [Function],
  ],
  [
    "./utils/func.ts",
    [Function],
  ],
  [
    "./utils/common.ts",
    [Function],
  ],
  [
    "./utils/index.ts",
    [Function],
  ],
  [
    "./utils/types.ts",
    [Function],
  ],
  [
    "./utils/utils.ts",
    [Function],
  ],
]
`;

exports[`Create Collector Include Imports Include SelectOption.tsx in first dir 1`] = `
[
  [
    "./node_modules/react/index.js",
    [Function],
  ],
  [
    "./src/components/SelectOption.tsx",
    [Function],
  ],
]
`;

exports[`Create Collector Include Imports Include SelectOption.tsx in root 1`] = `
[
  [
    "./node_modules/react/index.js",
    [Function],
  ],
  [
    "./src/SelectOption.tsx",
    [Function],
  ],
]
`;

exports[`Create Collector Include Imports Include SelectOption.tsx in root or first dir 1`] = `
[
  [
    "./node_modules/react/index.js",
    [Function],
  ],
  [
    "./src/components/SelectOption.tsx",
    [Function],
  ],
  [
    "./src/SelectOption.tsx",
    [Function],
  ],
]
`;

exports[`Create Collector Include Imports Include SelectOption.tsx in second dir 1`] = `
[
  [
    "./node_modules/react/index.js",
    [Function],
  ],
  [
    "./src/components/Field/SelectOption.tsx",
    [Function],
  ],
]
`;

exports[`Create Collector Include Imports Include all files ending with .types.ts or types.tsx 1`] = `
[
  [
    "./node_modules/react/index.js",
    [Function],
  ],
  [
    "./src/components/Field/Field/SelectOption.types.ts",
    [Function],
  ],
  [
    "./src/components/Field/SelectOption.types.ts",
    [Function],
  ],
  [
    "./src/components/SelectOption.types.ts",
    [Function],
  ],
  [
    "./src/SelectOption.types.ts",
    [Function],
  ],
]
`;

exports[`Create Collector Include Imports Include all from folders 1`] = `
[
  [
    "./node_modules/react/index.js",
    [Function],
  ],
  [
    "./src/components/Field/Field/Field.tsx",
    [Function],
  ],
  [
    "./src/components/Field/Field/SelectOption.tsx",
    [Function],
  ],
  [
    "./src/components/Field/Field/SelectOption.types.ts",
    [Function],
  ],
  [
    "./src/components/Field/Field/types.ts",
    [Function],
  ],
  [
    "./src/components/Field/Field.tsx",
    [Function],
  ],
  [
    "./src/components/Field/SelectOption.tsx",
    [Function],
  ],
  [
    "./src/components/Field/SelectOption.ts",
    [Function],
  ],
  [
    "./src/components/Field/SelectOption.types.ts",
    [Function],
  ],
  [
    "./src/components/Field/types.ts",
    [Function],
  ],
  [
    "./src/components/Field/types.tsx",
    [Function],
  ],
  [
    "./src/components/Input.tsx",
    [Function],
  ],
  [
    "./src/components/SelectOption.tsx",
    [Function],
  ],
  [
    "./src/components/SelectOption.types.ts",
    [Function],
  ],
]
`;

exports[`Create Collector Include Imports Include everything 1`] = `
[
  [
    "./node_modules/react/index.js",
    [Function],
  ],
  [
    "./src/components/Field/Field/Field.tsx",
    [Function],
  ],
  [
    "./src/components/Field/Field/SelectOption.tsx",
    [Function],
  ],
  [
    "./src/components/Field/Field/SelectOption.types.ts",
    [Function],
  ],
  [
    "./src/components/Field/Field/types.ts",
    [Function],
  ],
  [
    "./src/components/Field/Field.tsx",
    [Function],
  ],
  [
    "./src/components/Field/SelectOption.tsx",
    [Function],
  ],
  [
    "./src/components/Field/SelectOption.ts",
    [Function],
  ],
  [
    "./src/components/Field/SelectOption.types.ts",
    [Function],
  ],
  [
    "./src/components/Field/types.ts",
    [Function],
  ],
  [
    "./src/components/Field/types.tsx",
    [Function],
  ],
  [
    "./src/components/Input.tsx",
    [Function],
  ],
  [
    "./src/components/SelectOption.tsx",
    [Function],
  ],
  [
    "./src/components/SelectOption.types.ts",
    [Function],
  ],
  [
    "./src/utils/utils.ts",
    [Function],
  ],
  [
    "./src/constants.ts",
    [Function],
  ],
  [
    "./src/controller.ts",
    [Function],
  ],
  [
    "./src/index.ts",
    [Function],
  ],
  [
    "./src/SelectOption.tsx",
    [Function],
  ],
  [
    "./src/SelectOption.types.ts",
    [Function],
  ],
  [
    "./src/types.ts",
    [Function],
  ],
  [
    "./src/utils.ts",
    [Function],
  ],
]
`;

exports[`Create Collector Include Imports Include everything starts with SelectOption 1`] = `
[
  [
    "./node_modules/react/index.js",
    [Function],
  ],
  [
    "./src/components/Field/Field/SelectOption.tsx",
    [Function],
  ],
  [
    "./src/components/Field/Field/SelectOption.types.ts",
    [Function],
  ],
  [
    "./src/components/Field/SelectOption.tsx",
    [Function],
  ],
  [
    "./src/components/Field/SelectOption.ts",
    [Function],
  ],
  [
    "./src/components/Field/SelectOption.types.ts",
    [Function],
  ],
  [
    "./src/components/SelectOption.tsx",
    [Function],
  ],
  [
    "./src/components/SelectOption.types.ts",
    [Function],
  ],
  [
    "./src/SelectOption.tsx",
    [Function],
  ],
  [
    "./src/SelectOption.types.ts",
    [Function],
  ],
]
`;

exports[`Create Collector Include Imports Include everything with name SelectOption.tsx 1`] = `
[
  [
    "./node_modules/react/index.js",
    [Function],
  ],
  [
    "./src/components/Field/Field/SelectOption.tsx",
    [Function],
  ],
  [
    "./src/components/Field/SelectOption.tsx",
    [Function],
  ],
  [
    "./src/components/SelectOption.tsx",
    [Function],
  ],
  [
    "./src/SelectOption.tsx",
    [Function],
  ],
]
`;

exports[`Create Collector Include Imports Include ts and tsx extensions 1`] = `
[
  [
    "./node_modules/react/index.js",
    [Function],
  ],
  [
    "./src/components/Field/Field/Field.tsx",
    [Function],
  ],
  [
    "./src/components/Field/Field/SelectOption.tsx",
    [Function],
  ],
  [
    "./src/components/Field/Field/SelectOption.types.ts",
    [Function],
  ],
  [
    "./src/components/Field/Field/types.ts",
    [Function],
  ],
  [
    "./src/components/Field/Field.tsx",
    [Function],
  ],
  [
    "./src/components/Field/SelectOption.tsx",
    [Function],
  ],
  [
    "./src/components/Field/SelectOption.ts",
    [Function],
  ],
  [
    "./src/components/Field/SelectOption.types.ts",
    [Function],
  ],
  [
    "./src/components/Field/types.ts",
    [Function],
  ],
  [
    "./src/components/Field/types.tsx",
    [Function],
  ],
  [
    "./src/components/Input.tsx",
    [Function],
  ],
  [
    "./src/components/SelectOption.tsx",
    [Function],
  ],
  [
    "./src/components/SelectOption.types.ts",
    [Function],
  ],
  [
    "./src/utils/utils.ts",
    [Function],
  ],
  [
    "./src/constants.ts",
    [Function],
  ],
  [
    "./src/controller.ts",
    [Function],
  ],
  [
    "./src/index.ts",
    [Function],
  ],
  [
    "./src/SelectOption.tsx",
    [Function],
  ],
  [
    "./src/SelectOption.types.ts",
    [Function],
  ],
  [
    "./src/types.ts",
    [Function],
  ],
  [
    "./src/utils.ts",
    [Function],
  ],
]
`;

exports[`Create Collector Include Imports Include utils.ts from src and index.ts from utils 1`] = `
[
  [
    "./node_modules/react/index.js",
    [Function],
  ],
]
`;

exports[`Create Collector React module is not included 1`] = `
[
  [
    "./src/components/Field/Field/Field.tsx",
    [Function],
  ],
  [
    "./src/components/Field/Field/SelectOption.tsx",
    [Function],
  ],
  [
    "./src/components/Field/Field/SelectOption.types.ts",
    [Function],
  ],
  [
    "./src/components/Field/Field/types.ts",
    [Function],
  ],
  [
    "./src/components/Field/Field.tsx",
    [Function],
  ],
  [
    "./src/components/Field/SelectOption.tsx",
    [Function],
  ],
  [
    "./src/components/Field/SelectOption.ts",
    [Function],
  ],
  [
    "./src/components/Field/SelectOption.types.ts",
    [Function],
  ],
  [
    "./src/components/Field/types.ts",
    [Function],
  ],
  [
    "./src/components/Field/types.tsx",
    [Function],
  ],
  [
    "./src/components/Input.tsx",
    [Function],
  ],
  [
    "./src/components/SelectOption.tsx",
    [Function],
  ],
  [
    "./src/components/SelectOption.types.ts",
    [Function],
  ],
  [
    "./src/utils/utils.ts",
    [Function],
  ],
  [
    "./src/constants.ts",
    [Function],
  ],
  [
    "./src/controller.ts",
    [Function],
  ],
  [
    "./src/index.ts",
    [Function],
  ],
  [
    "./src/SelectOption.tsx",
    [Function],
  ],
  [
    "./src/SelectOption.types.ts",
    [Function],
  ],
  [
    "./src/types.ts",
    [Function],
  ],
  [
    "./src/utils.ts",
    [Function],
  ],
]
`;

exports[`Create Collector Roots Multiple 1`] = `
[
  [
    "./node_modules/react/index.js",
    [Function],
  ],
  [
    "./src/components/Field/Field/Field.tsx",
    [Function],
  ],
  [
    "./src/components/Field/Field/SelectOption.tsx",
    [Function],
  ],
  [
    "./src/components/Field/Field/SelectOption.types.ts",
    [Function],
  ],
  [
    "./src/components/Field/Field/types.ts",
    [Function],
  ],
  [
    "./src/components/Field/Field.tsx",
    [Function],
  ],
  [
    "./src/components/Field/SelectOption.tsx",
    [Function],
  ],
  [
    "./src/components/Field/SelectOption.ts",
    [Function],
  ],
  [
    "./src/components/Field/SelectOption.types.ts",
    [Function],
  ],
  [
    "./src/components/Field/types.ts",
    [Function],
  ],
  [
    "./src/components/Field/types.tsx",
    [Function],
  ],
  [
    "./src/components/Input.tsx",
    [Function],
  ],
  [
    "./src/components/SelectOption.tsx",
    [Function],
  ],
  [
    "./src/components/SelectOption.types.ts",
    [Function],
  ],
  [
    "./src/utils/utils.ts",
    [Function],
  ],
  [
    "./src/constants.ts",
    [Function],
  ],
  [
    "./src/controller.ts",
    [Function],
  ],
  [
    "./src/index.ts",
    [Function],
  ],
  [
    "./src/SelectOption.tsx",
    [Function],
  ],
  [
    "./src/SelectOption.types.ts",
    [Function],
  ],
  [
    "./src/types.ts",
    [Function],
  ],
  [
    "./src/utils.ts",
    [Function],
  ],
  [
    "./utils/folder/Option/Option.tsx",
    [Function],
  ],
  [
    "./utils/folder/Option/types.ts",
    [Function],
  ],
  [
    "./utils/folder/Form.tsx",
    [Function],
  ],
  [
    "./utils/folder/Select.tsx",
    [Function],
  ],
  [
    "./utils/folder/Select.types.ts",
    [Function],
  ],
  [
    "./utils/func.ts",
    [Function],
  ],
  [
    "./utils/common.ts",
    [Function],
  ],
  [
    "./utils/index.ts",
    [Function],
  ],
  [
    "./utils/types.ts",
    [Function],
  ],
  [
    "./utils/types.tsx",
    [Function],
  ],
  [
    "./utils/utils.ts",
    [Function],
  ],
]
`;
